--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,3 @@
 [build]
-  publish = "."            # مجلد النشر هو جذر المشروع
-  functions = "netlify/functions"  # مجلد الدوال
-
-[dev]
-  functions = "netlify/functions"
+  publish    = "."
+  functions  = "netlify/functions"
