--- a/.env
+++ b/.env
@@ -1,7 +1,19 @@
 ALLOWED_CODES=
 
 
+
+مكون من 9 خانات 
+5 ارقام 
+4 حروف
+
+
+
+
+
+
+
 TariqTERX,12660nmxf,82184dtje,66886cjhh,97930nwbf,71681eugt,22704ryfn,12752fzew,73114dxwn,45575fsvf,39578ntcv,20002fhac,56450qzrw,71326ocfe,23057fueo,81998wsqd,96322mgnj,96740nhyq,00649sdja,96824poua,81181khro,97158pcso,79014byhe,07200hznt,95966tjkf,77089qqxj,75583wzuo,78876hqsu,95847psmy,86751hftg,73655dwst
+
 
 
 
